Update LOCALVERSION for PD-CAF. Deactivate auto version while I'm at it
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/arch/arm64/configs/pa_marlin_defconfig
+++ b/arch/arm64/configs/pa_marlin_defconfig
@@ -1,5 +1,5 @@
-CONFIG_LOCALVERSION="-stayparanoid"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-pixeldustcaf-pie"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZ4=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
