--- a/arch/arm64/configs/pa_marlin_defconfig
+++ b/arch/arm64/configs/pa_marlin_defconfig
@@ -37,7 +37,7 @@ CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_MMAP_RND_BITS=24
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
-CONFIG_MODULES=y
+# CONFIG_MODULES is not set
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
